<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_cpassword">Confirm Password</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_already_account">Already have an account?</string>
    <string name="str_donot_account">Don\'t have an account?</string>
    <string name="str_home">home</string>
    <string name="str_search">search</string>
    <string name="str_upload">upload</string>
    <string name="str_favourite">favourite</string>
    <string name="str_profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_Profile">Profile</string>
    <string name="str_upp_upload">Upload</string>
    <string name="str_write_a_caption">Write a caption</string>
    <string name="james6746">James6746</string>
    <string name="favorite">Favorite</string>
    <string name="upr_search">Search</string>
    <string name="shamsun_mail">shamsun.com@gmail.com</string>
    <string name="khurshid88">khurshid88</string>
    <string name="sobirov_jamshid">Sobirov Jamshid</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <string name="str_signin_success">Signed in successfully</string>
    <string name="str_signin_failed">Sign in failed</string>
    <string name="str_signup_success">Signed up successfully</string>
    <string name="str_signup_failed">Sign up failed</string>
</resources>